Add email validation to form

--- a/Form_Validation/index.html
+++ b/Form_Validation/index.html
@@ -6,61 +6,75 @@
     <title>Form Validation</title>
   </head>
   <body>
-    <div>
-      <!-- first name -->
-      <label for="firstName">First Name</label>
-      <input
-        type="text"
-        id="firstName"
-        name="firstName"
-        placeholder="First Name"
-      />
-    </div>
-    <div>
-      <!-- last name -->
-      <label for="lastName">Last Name</label>
-      <input
-        type="text"
-        id="lastName"
-        name="lastName"
-        placeholder="Last Name"
-      />
-    </div>
-    <div>
-      <!-- email -->
-      <label for="email">Email</label>
-      <input
-        type="email"
-        id="email"
-        name="email"
-        placeholder="Email"
-        required
-        pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
-      />
-    </div>
-    <div>
-      <!-- password -->
-      <label for="password">Password</label>
-      <input
-        type="password"
-        id="password"
-        name="password"
-        placeholder="Password"
-      />
-    </div>
-    <div>
-      <!-- confirm password -->
-      <label for="confirmPassword">Confirm Password</label>
-      <input
-        type="password"
-        id="confirmPassword"
-        name="confirmPassword"
-        placeholder="Confirm Password"
-      />
-    </div>
-    <div>
-      <!-- submit button -->
-      <button type="submit">Submit</button>
-    </div>
+    <form onsubmit="return validateForm()">
+      <div>
+        <!-- first name -->
+        <label for="firstName">First Name</label>
+        <input
+          type="text"
+          id="firstName"
+          name="firstName"
+          placeholder="First Name"
+        />
+      </div>
+      <div>
+        <!-- last name -->
+        <label for="lastName">Last Name</label>
+        <input
+          type="text"
+          id="lastName"
+          name="lastName"
+          placeholder="Last Name"
+        />
+      </div>
+      <div>
+        <!-- email -->
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          required
+          pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+        />
+      </div>
+      <div>
+        <!-- password -->
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Password"
+          pattern="[0-9a-fA-F]{4,8}"
+        />
+      </div>
+      <div>
+        <!-- confirm password -->
+        <label for="confirmPassword">Confirm Password</label>
+        <input
+          type="password"
+          id="confirmPassword"
+          name="confirmPassword"
+          placeholder="Confirm Password"
+        />
+      </div>
+      <div>
+        <!-- submit button -->
+        <button type="submit">Submit</button>
+      </div>
+    </form>
+
+    <script>
+      function validateForm() {
+        const emailInput = document.getElementById("email");
+        if (!emailInput.checkValidity()) {
+          alert("Please enter a valid email address");
+          return false;
+        }
+        return true;
+      }
+    </script>
   </body>
 </html>
